# arcade-gui-2

./: .gitignore  Bitmap_8h_source.html  CMakeLists.txt  CPPLINT.cfg  ColorBackground_8h_source.html  Doxyfile  FileLoader_8h_source.html  Font_8h_source.html  GameDirectory_8h_source.html  GameState_8h_source.html  Game_8h_source.html  JoystickCodes_8h_source.html  JoystickListener_8h_source.html  JoystickMenu_8h_source.html  KeyListener_8h_source.html  LoaderPlugin_8h_source.html  Logger_8h_source.html  MameLoader_8h_source.html  Menu_8h_source.html  MouseListener_8h_source.html  README.md  StateEngine_8h_source.html  StateId_8h_source.html  Vec2_8h_source.html  Vec3_8h_source.html  annotated.html  classBitmap-members.html  classBitmap.html  classColorBackground-members.html  classColorBackground.html  classFileLoader-members.html  classFileLoader.html  classFileLoader__coll__graph.map  classFileLoader__coll__graph.md5  classFileLoader__inherit__graph.map  classFileLoader__inherit__graph.md5  classFont-members.html  classFont.html  classGameDirectory-members.html  classGameDirectory.html  (+98 more)
.github/workflows/: codeql.yml  deploy-docs.yml  sonar.yml
assets/games/: games.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+13 more)
src/: ColorBackground.cpp  ColorBackground.h  GameState.h  Init.cpp  Init.h  JoystickMenu.cpp  JoystickMenu.h  Menu.cpp  Menu.h  globals.cpp  globals.h  main.cpp  tools.cpp  tools.h
src/core/: Bitmap.h  Font.h  Vec2.h  Vec3.h
src/game/: Game.h  GameDirectory.h
src/plugins/: FileLoader.h  LoaderPlugin.h  MameLoader.h
src/states/: GameState.h  JoystickMenu.cpp  JoystickMenu.h  Menu.cpp  Menu.h  StateEngine.h  StateId.h
src/util/: JoystickListener.h  KeyListener.h  Logger.h  MouseListener.cpp  tools.cpp  tools.h
